[workspace]
resolver = "1"
members = [
    "programs/*"
]
exclude = [
    "**/target"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

